sahayakai-main/test_error_feedback_2.log
FAIL src/__tests__/components/feedback-dialog.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /Users/sargupta/SahayakAIV2/sahayakai/node_modules/lucide-react/dist/esm/lucide-react.js:8
    import * as index from './icons/index.js';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      45 |     >
      46 |       {children}
    > 47 |       <DialogPrimitive.Close className="absolute right-4 top-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:pointer-events-none data-[state=open]:bg-accent data-[state=open]:text-muted-foreground">
         |                      ^
      48 |         <X className="h-4 w-4" />
      49 |         <span className="sr-only">Close</span>
      50 |       </DialogPrimitive.Close>

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (src/components/ui/dialog.tsx:47:22)
      at Object.<anonymous> (src/components/feedback-dialog.tsx:14:17)
      at Object.<anonymous> (src/__tests__/components/feedback-dialog.test.tsx:19:25)

--------------------------------|---------|----------|---------|---------|-------------------
File                            | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------------------|---------|----------|---------|---------|-------------------
All files                       |       0 |        0 |       0 |       0 |                   
 components                     |       0 |        0 |       0 |       0 |                   
  feedback-dialog.tsx           |       0 |        0 |       0 |       0 | 1-150             
 components/lesson-plan         |       0 |        0 |       0 |       0 |                   
  lesson-plan-input-section.tsx |       0 |        0 |       0 |       0 | 1-135             
 data/ncert                     |       0 |        0 |       0 |       0 |                   
  english.ts                    |       0 |        0 |       0 |       0 | 1-69              
  hindi.ts                      |       0 |        0 |       0 |       0 | 1-69              
  index.ts                      |       0 |        0 |       0 |       0 | 1-68              
  mathematics.ts                |       0 |        0 |       0 |       0 | 1-503             
  science.ts                    |       0 |        0 |       0 |       0 | 1-483             
  social-studies.ts             |       0 |        0 |       0 |       0 | 1-103             
 features/lesson-planner/hooks  |       0 |        0 |       0 |       0 |                   
  use-lesson-plan.ts            |       0 |        0 |       0 |       0 | 1-321             
 lib                            |       0 |        0 |       0 |       0 |                   
  indian-context.ts             |       0 |        0 |       0 |       0 | 1-179             
  logger.ts                     |       0 |        0 |       0 |       0 | 1-70              
  safety.ts                     |       0 |        0 |       0 |       0 | 1-56              
--------------------------------|---------|----------|---------|---------|-------------------
Jest: "global" coverage threshold for statements (85%) not met: 0%
Jest: "global" coverage threshold for branches (85%) not met: 0%
Jest: "global" coverage threshold for lines (85%) not met: 0%
Jest: "global" coverage threshold for functions (85%) not met: 0%
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.836 s
Ran all test suites matching src/__tests__/components/feedback-dialog.test.tsx.
